Updated template/styles to match new docs styles.

--- a/_assets/css/buttons.less
+++ b/_assets/css/buttons.less
@@ -16,10 +16,10 @@
 
 a,
 .btn-link {
-  color: @violet;
+  color: #428bca;
 
   &:hover, &:focus {
-    color: darken(@violet, 15%);
+    color: darken(#428bca, 15%);
     text-decoration: none;
   }
 }
