--- a/_assets/css/docs.less
+++ b/_assets/css/docs.less
@@ -1,5 +1,4 @@
 .docs-header {
-  margin-top: 5px; /* This lines the header up with the search box */
   margin-bottom: 25px;
 }
 
@@ -15,10 +14,10 @@
 .docs-sidenav li > a:hover,
 .docs-sidenav li > a:focus {
   padding-left: 19px;
-  color: #563d7c;
+  color: #428BCA;
   text-decoration: none;
   background-color: transparent;
-  border-left: 1px solid #563d7c;
+  border-left: 1px solid #3A77AB;
 }
 
 .docs-sidenav .active > a,
@@ -26,9 +25,9 @@
 .docs-sidenav .active:focus > a {
   padding-left: 18px;
   font-weight: bold;
-  color: #563d7c;
+  color: #428BCA;
   background-color: transparent;
-  border-left: 2px solid #563d7c;
+  border-left: 2px solid #3A77AB;
 }
 
 .docs-sidenav .nav {
