--- a/_assets/css/mesosphere.less
+++ b/_assets/css/mesosphere.less
@@ -31,12 +31,13 @@
 
 body {
   position: relative;
-  background: @base-gray;
+  background: lighten(@base-gray, 80%);
+  padding-top: 20px;
   -webkit-backface-visibility: hidden;
 }
 
 .body-light {
-  background: lighten(@base-gray, 90%);
+  background: lighten(@base-gray, 80%);
   min-height: 650px;
   padding-top: @section-spacing;
   padding-bottom: @section-spacing;
@@ -55,11 +56,11 @@ footer {
 }
 
 footer a {
-  color: #ccc;
+  color: #767676;
 }
 
 footer a:hover {
-  color: #e2e2e2;
+  color: darken(#767676, 40%);
   text-decoration: underline;
 }
 
@@ -261,8 +262,15 @@ footer a:hover {
 }
 
 .navbar-default .navbar-brand {
+  color: @white;
+  font-weight: 200;
+  letter-spacing: 1px;
   padding-bottom: 0;
-  padding-top: 13px;
+  padding-top: 15px;
+
+  &:hover {
+    color: #CDCDCD;
+  }
 }
 
 .navbar-default .navbar-nav {
@@ -450,6 +458,7 @@ hr {
   background-color: @base-gray;
   background-image: none;
   border: none;
+  border-radius: 4px;
   text-shadow: none;
 }
 
