Updated search button color.

--- a/_assets/css/mesosphere.less
+++ b/_assets/css/mesosphere.less
@@ -131,6 +131,11 @@ footer a:hover {
   display: block;
 }
 
+.gsc-search-box input.gsc-search-button {
+  border-color: #428bca;
+  background-color: #428bca;
+}
+
 .zeroclipboard-is-hover {
   background-color: #e6e6e6;
   background-position: 0 -15px;
