--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,6 @@
 <div class="navbar navbar-default {% if include.extended %}navbar-extended{% endif %} {{page.navbar}}" role="navigation">
   <div class="navbar-header">
-    <a class="navbar-brand" href="http://open.mesosphere.io">
+    <a class="navbar-brand" href="http://open.mesosphere.com">
       Mesosphere Community Documentation
     </a>
   </div>
