--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,10 @@
 <footer class="{% if include.stealth %} footer-stealth {% endif %} {{page.footer}}">
   <div class="container">
-    <ul class="list-unstyled">
-      <li><a href="https://twitter.com/mesosphere">@mesosphere</a>
-      <li><span class="text-muted">© 2015 Mesosphere, Inc.</span>
-    </ul>
+    <p align="center"><span class="text-muted"><a href="/support/" target="_blank">Support and feedback</a> | <a href="https://mesosphere.com/terms/" target="_blank">Terms of service</a> | <a href="https://mesosphere.com/privacy/" target="_blank">Privacy Policy</a> </span>
+    <p align="center"><span class="text-muted">© 2015 Mesosphere, Inc. All Rights Reserved.</span>
+    <!--<ul class="list-unstyled">
+      <li align="center"><span class="text-muted">© 2015 Mesosphere, Inc. All Rights Reserved.</span>
+    </ul>-->
   </div>
 </footer>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
