--- a/_assets/css/docs.less
+++ b/_assets/css/docs.less
@@ -1,5 +1,6 @@
 .docs-header {
   margin-bottom: 25px;
+  margin-top: 0;
 }
 
 .docs-sidenav li > a {
@@ -7,7 +8,7 @@
   padding: 4px 20px;
   font-size: 13px;
   font-weight: 500;
-  color: #999;
+  color: #6D6D6D;
   .transition(none);
 }
 
