Fixed support link in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="{% if include.stealth %} footer-stealth {% endif %} {{page.footer}}">
   <div class="container">
-    <p align="center"><span class="text-muted"><a href="/support/" target="_blank">Support and feedback</a> | <a href="https://mesosphere.com/terms/" target="_blank">Terms of service</a> | <a href="https://mesosphere.com/privacy/" target="_blank">Privacy Policy</a> </span>
+    <p align="center"><span class="text-muted"><a href="http://docs.mesosphere.com/support/" target="_blank">Support and feedback</a> | <a href="https://mesosphere.com/terms/" target="_blank">Terms of service</a> | <a href="https://mesosphere.com/privacy/" target="_blank">Privacy Policy</a> </span>
     <p align="center"><span class="text-muted">© 2015 Mesosphere, Inc. All Rights Reserved.</span>
     <!--<ul class="list-unstyled">
       <li align="center"><span class="text-muted">© 2015 Mesosphere, Inc. All Rights Reserved.</span>
